--- a/configclient2/config-server-client2-development.properties
+++ b/configclient2/config-server-client2-development.properties
@@ -1,1 +1,1 @@
-msg = Hello world - this is for config Client2 from config server – Development environment Modified
+msg = Hello world - this is for config Client2 from config server \– Development environment Modified
