--- a/configclient2/config-server-client2-production.properties
+++ b/configclient2/config-server-client2-production.properties
@@ -1,1 +1,1 @@
-msg = Hello world - this is for config Client2 from config server – Production environment
+msg = Hello world - this is for config Client2 from config server \– Production environment
